Enable config flow in manifest.json

--- a/custom_components/zhuhai_electric_tariff/manifest.json
+++ b/custom_components/zhuhai_electric_tariff/manifest.json
@@ -7,8 +7,9 @@
     "dependencies": [],
     "codeowners": ["@Alpha"],
     "requirements": [],
-    "config_flow": false
+    "config_flow": true
 
   }
+
 
 
